--- a/konsigue-account/src/App.css
+++ b/konsigue-account/src/App.css
@@ -8,7 +8,7 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 90px;
   padding: 20px;
   color: white;
 }
@@ -24,4 +24,9 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.img-header{
+  max-width: 100%;
+  max-height: 20vh;
 }
